--- a/index.html
+++ b/index.html
@@ -67,9 +67,24 @@
     <div class="message-wrapper">
       <div class="container">
         <div class="heading">
-          <h2>Silakan daftarkan dirimu menjadi member dari Krish Cloting</h2>
+          <h2>Silakan daftarkan dirimu menjadi member dari Krish Clothing dan dapatkan diskon <em>25%</em></h2>
+          <a href="#"><img src="clothing..gif"></a>
         </div>
       </div>
+    </div>
+    <div class="contact-form">
+      <h3 class="section-title">
+        Be our member!
+      </h3>
+      <p>Nama Lengkap <em>(Required)</em></p>
+      <input>
+      <p>Email <em>(Required)</em></p>
+      <input>
+      <p>Kenapa tertarik dengan produk kami? <em>(Required)</em></p>
+      <textarea>
+      </textarea>
+      <p> * Required fields must be filled.</p>
+      <input class="contact-submit" type="submit" value="Send">
     </div>
     <footer>
       <div class="container">
