--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           <img class="logo" src="logo4.png">
         </div>
         <div class="header-right">
-          <a href="#">LOGIN</a>
+          <a href="#">LOG IN</a>
+          <a href="#">SIGN IN</a>
           <a href="#">CARI</a>
         </div>
       </div>
@@ -90,6 +91,13 @@
       <div class="container">
         <img class="logo" src="logo4.png">
         <p>Terdepan dalam gaya.</p>
+      </div>
+      <div class="footer-list">
+      <ul>
+      <li>Blog</li>
+      <li>About</li>
+      <li>Contact Us</li>
+      </ul>
       </div>
     </footer>
   </body>
